--- a/src/client/styles/header.scss
+++ b/src/client/styles/header.scss
@@ -1,3 +1,10 @@
+@media (max-width:600px) {
+    header{
+        margin-left: 1em;
+        font-size: 1.2em;
+    }
+}
+
 header {
     text-align: center;
     font-size: 1.8rem;
